--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,8 @@
 }
 
 body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--grey-200);
   color: var(--grey-900);
 }
